force-app/main/default/objects/Opportunity/fields/Pursuit_Lead__c.field-meta.xml
<CustomField>
    <fullName>Pursuit_Lead__c</fullName>
    <description>Name of person heading this pursuit IF other than the opp owner</description>
    <inlineHelpText>Name of person heading this pursuit IF other than the opp owner</inlineHelpText>
    <label>Pursuit Lead</label>
    <length>32</length>
    <type>Text</type>
</CustomField>