force-app/main/default/objects/Opportunity/fields/Qualifies_for_Commission_Payment__c.field-meta.xml
<CustomField>
    <fullName>Qualifies_for_Commission_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualifies for Commission Payment</label>
    <type>Checkbox</type>
</CustomField>