force-app/main/default/objects/Opportunity/fields/Quarter_Won__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Won__c</fullName>
    <formula>CEILING( MONTH (  CloseDate  ) / 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>