force-app/main/default/objects/Opportunity/fields/Quota_Name__c.field-meta.xml
<CustomField>
    <fullName>Quota_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Detail</label>
    <referenceTo>Quota_Detail__c</referenceTo>
    <relationshipLabel>Opportunities (Quota Detail)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>