force-app/main/default/objects/Opportunity/fields/Quota_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Quota_Name_Text__c</fullName>
    <formula>Quota_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Name Text</label>
    <type>Text</type>
</CustomField>