force-app/main/default/objects/Opportunity/fields/Quota_Year__c.field-meta.xml
<CustomField>
    <fullName>Quota_Year__c</fullName>
    <formula>YEAR(CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>