force-app/main/default/objects/Opportunity/fields/Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If MAINTENANCE is chosen as the Solution Category, check this box</description>
    <inlineHelpText>If MAINTENANCE is chosen as the Solution Category, check this box</inlineHelpText>
    <label>Recurring Revenue</label>
    <type>Checkbox</type>
</CustomField>