force-app/main/default/objects/Opportunity/fields/Reference_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Choose a Contact who&apos;s information can be used as a reference to this client</description>
    <inlineHelpText>Choose a Contact who&apos;s information can be used as a reference to this client</inlineHelpText>
    <label>Reference #2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Reference #2)</relationshipLabel>
    <relationshipName>Reference_Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>