force-app/main/default/objects/Opportunity/fields/Resource_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resource_Notes__c</fullName>
    <label>Resource Notes</label>
    <type>TextArea</type>
</CustomField>