force-app/main/default/objects/Opportunity/fields/Retired_Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Retired_Compelling_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retired Compelling Event</label>
    <type>Checkbox</type>
</CustomField>