force-app/main/default/objects/Opportunity/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>Why will this deal not close? Where are we at risk?</inlineHelpText>
    <label>Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>