force-app/main/default/objects/Opportunity/fields/Salesforce_ACV_Amount__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ACV_Amount__c</fullName>
    <label>Salesforce ACV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>