force-app/main/default/objects/Opportunity/fields/SF_License_Type__c.field-meta.xml
<CustomField>
    <fullName>SF_License_Type__c</fullName>
    <label>SF License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Net New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>