force-app/main/default/objects/Opportunity/fields/Signed_MSA_MLA__c.field-meta.xml
<CustomField>
    <fullName>Signed_MSA_MLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proposed Verbally Won Step 1 of 2</description>
    <inlineHelpText>Proposed Verbally Won Step 1 of 2</inlineHelpText>
    <label>Retired - Signed MSA/MLA</label>
    <type>Checkbox</type>
</CustomField>