force-app/main/default/objects/Opportunity/fields/Signed_SOW_Pricing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Signed_SOW_Pricing_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proposed Verbally Won Step 2 of 2</description>
    <inlineHelpText>Proposed Verbally Won Step 2 of 2</inlineHelpText>
    <label>Retired - Signed SOW/Pricing Sch</label>
    <type>Checkbox</type>
</CustomField>