force-app/main/default/objects/Opportunity/fields/Software_Pymt_Terms__c.field-meta.xml
<CustomField>
    <fullName>Software_Pymt_Terms__c</fullName>
    <label>Retired - SW Pymt Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Software_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Annual Payments</fullName>
            </value>
            <value>
                <fullName>Upfront Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>