force-app/main/default/objects/Opportunity/fields/Software_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Software_Renewal_Date__c</fullName>
    <description>Date of software renewal</description>
    <inlineHelpText>Date of software renewal</inlineHelpText>
    <label>Retired 12-31-15 SW Renewal Date</label>
    <type>Date</type>
</CustomField>