force-app/main/default/objects/Opportunity/fields/Software_Type__c.field-meta.xml
<CustomField>
    <fullName>Software_Type__c</fullName>
    <label>Retired 12-31-2015 Software Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>7S Developed</fullName>
            </value>
            <value>
                <fullName>Influence</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Resell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>