force-app/main/default/objects/Opportunity/fields/Solution_Category__c.field-meta.xml
<CustomField>
    <fullName>Solution_Category__c</fullName>
    <description>7Summits Solution Categories</description>
    <label>Retired 12-31-15 Solution Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AdmissionsConnect</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>CMaaS</fullName>
            </value>
            <value>
                <fullName>Customer Centric Community</fullName>
            </value>
            <value>
                <fullName>CustomerConnect</fullName>
            </value>
            <value>
                <fullName>Employee Centric Community</fullName>
            </value>
            <value>
                <fullName>EmployeeConnect</fullName>
            </value>
            <value>
                <fullName>Jive Optimizer</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>PartnerConnect</fullName>
            </value>
            <value>
                <fullName>Peak Framework</fullName>
            </value>
            <value>
                <fullName>SIaaS</fullName>
            </value>
            <value>
                <fullName>Social Business Mgmt</fullName>
            </value>
            <value>
                <fullName>Social Business Processes</fullName>
            </value>
            <value>
                <fullName>Social Marketing &amp; Outreach</fullName>
            </value>
            <value>
                <fullName>StudentConnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>