force-app/main/default/objects/Opportunity/fields/Solution_Primary_Audience__c.field-meta.xml
<CustomField>
    <fullName>Solution_Primary_Audience__c</fullName>
    <inlineHelpText>Choose the option that reflects the primary audience for this Opportunity</inlineHelpText>
    <label>Solution Primary Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>