force-app/main/default/objects/Opportunity/fields/Solution_Term__c.field-meta.xml
<CustomField>
    <fullName>Solution_Term__c</fullName>
    <description>Indicate the duration in years - 1, 2, 3, 4, or 5 - of the solution agreement</description>
    <inlineHelpText>Indicate the duration in years - 1, 2, 3, 4, or 5 - of the solution agreement</inlineHelpText>
    <label>Retired 12-31-15 - Solution Term</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>