force-app/main/default/objects/Opportunity/fields/Solutions__c.field-meta.xml
<CustomField>
    <fullName>Solutions__c</fullName>
    <description>NASCAR - Solutions</description>
    <inlineHelpText>What solution(s) are we considering to solve their need? (e.g. Salesforce Community, UX redesign) 
Why is this solution unique?</inlineHelpText>
    <label>Ret&apos;d 6-10-2016 Solutions for NASCAR</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>