force-app/main/default/objects/Opportunity/fields/Sourced_Salesforce_ACV__c.field-meta.xml
<CustomField>
    <fullName>Sourced_Salesforce_ACV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this will be counted as sourced ACV with Salesforce.</description>
    <inlineHelpText>Check if true</inlineHelpText>
    <label>Sourced Salesforce ACV?</label>
    <type>Checkbox</type>
</CustomField>