force-app/main/default/objects/Opportunity/fields/SOW_Pricing_Schedule_Delivered_to_Client__c.field-meta.xml
<CustomField>
    <fullName>SOW_Pricing_Schedule_Delivered_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Solution Definition Step 3 of 3</description>
    <inlineHelpText>Solution Definition Step 3 of 3</inlineHelpText>
    <label>Retired - SOW/Pricing Sch Delivered</label>
    <type>Checkbox</type>
</CustomField>