force-app/main/default/objects/Opportunity/fields/Stage_1_Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Stage_1_Initial_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prospecting Stage</description>
    <inlineHelpText>Prospecting Stage</inlineHelpText>
    <label>Retired - Stage 1 Initial Contact</label>
    <type>Checkbox</type>
</CustomField>