force-app/main/default/objects/Opportunity/fields/Statement_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Work__c</fullName>
    <inlineHelpText>Official Statement of Work being reviewed and approved.  Please place document link here.</inlineHelpText>
    <label>Statement of Work</label>
    <type>Url</type>
</CustomField>