force-app/main/default/objects/Opportunity/fields/Svcs_Amt_for_NetSuite2__c.field-meta.xml
<CustomField>
    <fullName>Svcs_Amt_for_NetSuite2__c</fullName>
    <inlineHelpText>This amount is auto-calculated from Products list.</inlineHelpText>
    <label>Svcs Only Sub-Total</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Opp_Prod_Family__c</field>
        <operation>equals</operation>
        <value>Service,, Customer Success</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>