force-app/main/default/objects/Opportunity/fields/Team_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Team_Recognition__c</fullName>
    <description>Recognition of those who helped close the opportunity.</description>
    <inlineHelpText>Provide recognition for the team, calling out specific team players, client expectations exceeded, etc.</inlineHelpText>
    <label>Team Recognition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>