force-app/main/default/objects/Opportunity/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>Choose which technology is being used on this opportunity</description>
    <inlineHelpText>Choose which technology is being used on this opportunity</inlineHelpText>
    <label>Retired 12-31-2015 Technology</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Jive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>