force-app/main/default/objects/Opportunity/fields/Technology_Current_Platform__c.field-meta.xml
<CustomField>
    <fullName>Technology_Current_Platform__c</fullName>
    <description>For Opportunity Brief</description>
    <inlineHelpText>What is their current technology or current platform?</inlineHelpText>
    <label>Technology/Current Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Jive</fullName>
            </value>
            <value>
                <fullName>Inquira</fullName>
            </value>
            <value>
                <fullName>Drupla</fullName>
            </value>
            <value>
                <fullName>Lithium</fullName>
            </value>
            <value>
                <fullName>Mzinga</fullName>
            </value>
            <value>
                <fullName>GetSatisfaction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Salesforce Communities (or legacy Portals)</fullName>
            </value>
            <value>
                <fullName>Microsoft (SharePoint, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>