force-app/main/default/objects/Opportunity/fields/Timing_Understood__c.field-meta.xml
<CustomField>
    <fullName>Timing_Understood__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified Step 3 of 4</description>
    <inlineHelpText>Identified Step 3 of 4</inlineHelpText>
    <label>Retired - Timing Understood</label>
    <type>Checkbox</type>
</CustomField>