force-app/main/default/objects/Opportunity/fields/Total_Sales_Price_Amnt__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price_Amnt__c</fullName>
    <label>Total Sales Price Amnt</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>