force-app/main/default/objects/Opportunity/fields/Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Amount__c</fullName>
    <description>1 Prospect 5% / 2 Qualified 20% / 3 Opportunity Shaped 35% / 4 Proposal 50% / 5 Agreements Delivered 65% / 6 Negotiating 80% / 7 Verbal Agreement 95% / 8 Closed Won 100%</description>
    <formula>Amount *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 Prospect 0% / 2 Identified 10% / 3 Qualified 25% / 4 Solution Definition 50% / 5 Propose Solution 75% / 6 Negotiate 90% / 7 Closed Won 100%</inlineHelpText>
    <label>Weighted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>