force-app/main/default/objects/Opportunity/fields/X18_Digit_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Opportunity_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Opportunity ID</label>
    <type>Text</type>
</CustomField>