force-app/main/default/objects/Opportunity/fields/X1st_Created_Opp_del__c.field-meta.xml
<CustomField>
    <fullName>X1st_Created_Opp_del__c</fullName>
    <formula>DATEVALUE(CreatedDate) = Date_of_1st_Created_Opp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Created Opp</label>
    <type>Checkbox</type>
</CustomField>