force-app/main/default/objects/Opportunity/fields/X1st_Won_Opp__c.field-meta.xml
<CustomField>
    <fullName>X1st_Won_Opp__c</fullName>
    <formula>CloseDate = Date_of_1st_Won_Opp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Won Opp</label>
    <type>Checkbox</type>
</CustomField>