force-app/main/default/objects/Opportunity/fields/X2_Months_Out__c.field-meta.xml
<CustomField>
    <fullName>X2_Months_Out__c</fullName>
    <formula>IF(
  AND(
    OR(
    ISPICKVAL(StageName,&quot;3 Opportunity Shaped&quot;),ISPICKVAL(StageName,&quot;4 Proposal&quot;),
    ISPICKVAL(StageName,&quot;5 Agreements Delivered&quot;),ISPICKVAL(StageName,&quot;6 Negotiating&quot;),
    ISPICKVAL(StageName,&quot;7 Verbal Agreement&quot;)),
  MONTH(CloseDate)=MONTH(TODAY())+2),Forecast_Formula__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 Months Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>