force-app/main/default/objects/Opportunity/fields/X7Summits_Salesforce_Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>X7Summits_Salesforce_Partner_Role__c</fullName>
    <inlineHelpText>Implementation Partner = 7Summits will be/is contracted to do the implementation work
Joint Sale = 7Summits helped Salesforce close this business. Without 7Summits as the partner, it would not have closed 
Both = 7Summits should receive credit for both</inlineHelpText>
    <label>7Summits Salesforce Partner Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Partner</fullName>
            </value>
            <value>
                <fullName>Joint Sales</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>