force-app/main/default/objects/Opportunity/validationRules/Business_Segment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Segment_Required</fullName>
    <active>true</active>
    <description>The Business Segment is required.</description>
    <errorConditionFormula>AND (
ISBLANK(TEXT( Business_Segment__c )),
CloseDate&gt;=DATE(2019,01,01),
OR(
ISPICKVAL(StageName, &quot;3 Opportunity Shaped&quot;),
ISPICKVAL(StageName, &quot;4 Proposal&quot;),
ISPICKVAL(StageName, &quot;5 Agreements Delivered&quot;),
ISPICKVAL(StageName, &quot;6 Negotiating&quot;),
ISPICKVAL(StageName, &quot;7 Verbal Agreement&quot;),
ISPICKVAL(StageName, &quot;8 Closed Won&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Business_Segment__c</errorDisplayField>
    <errorMessage>Business Segment is required.</errorMessage>
</ValidationRule>