force-app/main/default/objects/Opportunity/validationRules/Channel_Rep_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_Rep_Required</fullName>
    <active>true</active>
    <description>When the Lead Source is marketing related and the Business Segment equals Salesforce, Channel Rep is required.</description>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Lead_Source__c, &quot;Digital Marketing&quot;), 
ISPICKVAL(Lead_Source__c, &quot;Hosted Event&quot;), 
ISPICKVAL(Lead_Source__c, &quot;Sponsored Event&quot;), 
ISPICKVAL(Lead_Source__c, &quot;Website Conversion&quot;), 
ISPICKVAL(Lead_Source__c, &quot;Direct Inbound&quot;), 
ISPICKVAL(Lead_Source__c, &quot;AppExchange&quot;),
ISPICKVAL(Lead_Source__c, &quot;Channel Inbound&quot;) 
),
ISPICKVAL(Business_Segment__c, &quot;Salesforce&quot;),
ISBLANK(Channel_Rep__c),
CloseDate&gt;=DATE(2019,10,01),

OR(
ISPICKVAL(StageName , &quot;4 Proposal&quot; ),
ISPICKVAL(StageName , &quot;5 Agreements Delivered&quot; ),
ISPICKVAL(StageName , &quot;6 Negotiating&quot; ),
ISPICKVAL(StageName , &quot;7 Verbal Agreement&quot; ),
ISPICKVAL(StageName , &quot;8 Closed Won&quot; )
) 
)
&amp;&amp; $Profile.Name != &quot;System Administrator&quot;
&amp;&amp; $Profile.Name != &quot;7S System Admin&quot;</errorConditionFormula>
    <errorDisplayField>Channel_Rep__c</errorDisplayField>
    <errorMessage>Channel Rep is required.</errorMessage>
</ValidationRule>