force-app/main/default/objects/Opportunity/validationRules/Competition_Loss.validationRule-meta.xml
<ValidationRule>
    <fullName>Competition_Loss</fullName>
    <active>true</active>
    <description>When an Opportunity is lost to a competitor company or platform, field &quot;Competition&quot; is required.</description>
    <errorConditionFormula>AND (
ISBLANK(Competition__c),
CloseDate&gt;=DATE(2019,01,01),
OR(
ISPICKVAL(Loss_Reason__c, &quot;Lost to Competitor&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Salesforce Platform Loss&quot;)
)
)
&amp;&amp; $Profile.Name != &quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>Competition__c</errorDisplayField>
    <errorMessage>Add the name of the competitor or platform this deal was lost to, in field &quot;Competition&quot;</errorMessage>
</ValidationRule>