force-app/main/default/objects/Opportunity/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>true</active>
    <description>Description is required when the opp is closed/won.</description>
    <errorConditionFormula>AND 
( 
AccountId&lt;&gt;&quot;0018000000wPCYE&quot;, 
IsWon = True, 
CloseDate&gt;=DATE(2019,01,01),
ISBLANK( Description)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Description is required in order to mark this opportunity Closed/Won.</errorMessage>
</ValidationRule>