force-app/main/default/objects/Opportunity/validationRules/Lead_Source_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Detail_Required</fullName>
    <active>true</active>
    <description>When the Lead Source is marketing related, the Lead Source Detail field is required.</description>
    <errorConditionFormula>AND( 

OR( 
ISPICKVAL(Lead_Source__c, &quot;Digital Marketing&quot;), 
ISPICKVAL(Lead_Source__c, &quot;Hosted Event&quot;), 
ISPICKVAL(Lead_Source__c, &quot;Sponsored Event&quot;), 
ISPICKVAL(Lead_Source__c, &quot;Website Conversion&quot;), 
ISPICKVAL(Lead_Source__c, &quot;Direct Inbound&quot;), 
ISPICKVAL(Lead_Source__c, &quot;AppExchange&quot;) 
), 

ISBLANK(Lead_Source_Detail__c),
CloseDate&gt;=DATE(2019,01,01)
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Detail__c</errorDisplayField>
    <errorMessage>Lead Source Detail is required.</errorMessage>
</ValidationRule>