force-app/main/default/objects/Opportunity/validationRules/Link_to_Final_SOW_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Link_to_Final_SOW_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Link_to_Final_Executed_SOW_PDF__c),
IsWon = TRUE,
CloseDate&gt;DATE(2020,04,28))
&amp;&amp; $Profile.Name != &quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>Link_to_Final_Executed_SOW_PDF__c</errorDisplayField>
    <errorMessage>Please provide the google document link to the final PDF executed Statement of Work prior to updating to Closed Won</errorMessage>
</ValidationRule>