force-app/main/default/objects/Opportunity/validationRules/Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason</fullName>
    <active>true</active>
    <description>When an Opportunity is lost, field Loss Reason is required</description>
    <errorConditionFormula>AND(
ISBLANK(TEXT(Loss_Reason__c)),
CloseDate&gt;=DATE(2019,01,01),
ISPICKVAL(StageName, &quot;9 Closed Lost&quot;)
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Loss Reason is required</errorMessage>
</ValidationRule>