force-app/main/default/objects/Opportunity/validationRules/Past_Date_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_Date_Restriction</fullName>
    <active>true</active>
    <description>The date entered will not be accepted if it is prior to 12/1/19.</description>
    <errorConditionFormula>AND(
(CloseDate) &lt; DATE(2019,12,01),
ISCHANGED(IsWon)
)</errorConditionFormula>
    <errorMessage>The close date is outside of the standard date range. Please verify that the date is correct.</errorMessage>
</ValidationRule>