force-app/main/default/objects/Opportunity/validationRules/Selling_Through_Curiosity.validationRule-meta.xml
<ValidationRule>
    <fullName>Selling_Through_Curiosity</fullName>
    <active>true</active>
    <description>Fields requiried in order to move beyond Stage 3</description>
    <errorConditionFormula>AND(OR(
ISBLANK(Compelling_Event__c),
ISBLANK(Current_Situation__c),
ISBLANK(Impacts__c),
ISBLANK(Ideal_Solution__c),
ISBLANK(Ideal_Solution_Benefits__c),
ISBLANK(Problems__c)
),
CloseDate&gt;=DATE(2020,04,15),
OR(
ISPICKVAL(StageName , &quot;4 Proposal&quot; ),
ISPICKVAL(StageName , &quot;5 Agreements Delivered&quot; ),
ISPICKVAL(StageName , &quot;6 Negotiating&quot; ),
ISPICKVAL(StageName , &quot;7 Verbal Agreement&quot; ),
ISPICKVAL(StageName , &quot;8 Closed Won&quot; )
)
)</errorConditionFormula>
    <errorMessage>Populate missing data in the Selling Through Curiosity Section</errorMessage>
</ValidationRule>