force-app/main/default/objects/Opportunity/validationRules/SF_Licence_Type_required_from_stage_4.validationRule-meta.xml
<ValidationRule>
    <fullName>SF_Licence_Type_required_from_stage_4</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(StageName),				ISBLANK(TEXT(SF_License_Type__c)),
				OR(
								ISPICKVAL(StageName,&quot;4 Proposal&quot;),
								ISPICKVAL(StageName,&quot;5 Agreements Delivered&quot;),
								ISPICKVAL(StageName,&quot;6 Negotiating&quot;),
								ISPICKVAL(StageName,&quot;7 Verbal Agreement&quot;),
								ISPICKVAL(StageName,&quot;8 Closed Won&quot;)
				)
)</errorConditionFormula>
    <errorDisplayField>SF_License_Type__c</errorDisplayField>
    <errorMessage>SF License Type is required in order to move this opportunity to Proposal.</errorMessage>
</ValidationRule>