force-app/main/default/objects/Opportunity/validationRules/Team_Recognition.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Recognition</fullName>
    <active>true</active>
    <description>Team Recognition is required to mark an opportunity closed/won.</description>
    <errorConditionFormula>AND 
( 
AccountId&lt;&gt;&quot;0018000000wPCYE&quot;, 
IsWon = True, 
ISPICKVAL(Project_Type__c,&quot;New Project&quot;),
ISBLANK(Team_Recognition__c),
CloseDate&gt;=DATE(2019,01,01)
)</errorConditionFormula>
    <errorDisplayField>Team_Recognition__c</errorDisplayField>
    <errorMessage>Team Recognition is required in order to mark this opportunity Closed/Won.</errorMessage>
</ValidationRule>