force-app/main/default/objects/Opportunity/validationRules/WAR_checkbox_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>WAR_checkbox_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(ForecastCategoryName, &quot;Commit&quot;)),
		WAR__c,
		ISCHANGED(WAR__c)
)</errorConditionFormula>
    <errorDisplayField>WAR__c</errorDisplayField>
    <errorMessage>Forecast Category must be &quot;commit&quot; to check WAR.</errorMessage>
</ValidationRule>